--- a/humor.css
+++ b/humor.css
@@ -11,7 +11,7 @@ ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #878532;
 }
 
 li {
@@ -20,14 +20,14 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: #302109;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #111;
+  background-color: #537636;
 }
 
 * {
